# vaultmap

./: .gitignore  AUDIT.md  CONTRIBUTING.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/: vault.yaml
demos/01-basic/: SCENARIO.md  entries.txt
demos/01-incomplete-vault/: SCENARIO.md  vault.yaml
demos/02-estate-planning/: SCENARIO.md  vault.yaml
demos/03-business-keyholder/: SCENARIO.md  vault.yaml
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_hardening.py  test_smoke.py
vaultmap/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
