[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-vaultmap"
version = "0.1.0"
description = "Personal asset & account inventory — estate-planning grade encrypted"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["privacy", "cognis-digital", "cognis-neural-suite", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cognis-core>=0.1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/vaultmap"

[project.scripts]
vaultmap = "vaultmap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vaultmap"]
